# ITR-examples

./: .coveragerc  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .requirements-banner.txt  AUTHORS.rst  CHANGELOG.rst  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: .requirements-banner.txt  billing.yaml  bootstrap.yaml  builds.yaml  codeql.yml  dependencies.yaml  documentation.yaml  github-test-release.yaml  linting.yaml  notebooks.yaml  release.yaml  security.yaml  standalone-linting.yaml  test-release.yaml  testing.yaml  verify.yaml
docs/: conf.py  getting_started.rst  requirements.txt
notebooks/: 00_vault_cleanup.ipynb  01a_vault_ingest.ipynb  01b_vault_ingest_v2.ipynb  02a_vault_dev.ipynb  02b_vault_dev.ipynb  03_vault_quant.ipynb  04_vault_user.ipynb  co2budget.ipynb  quick_temp_score_calculation.ipynb  quick_template_score_calc.ipynb  s1s2_s3_calc.ipynb  template2vault.ipynb  template_update.ipynb  vault_demo_cleanup.ipynb  vault_demo_n0.ipynb  vault_demo_n1.ipynb  vault_ingest_company_data.ipynb  vault_v2_n0.ipynb
resources/standalone-linting/: .pre-commit-config.yaml
scripts/: purge-dev-tags.sh  release-versioning.sh
src/: __init__.py
src/ITR-examples/: ITR_DV.py  environment.yml
src/ITR_examples/: ITR_DV.py  ITR_UI.py  __init__.py  environment.yml  utils.py
src/ITR_examples/data/: __init__.py  base_providers.py  data_providers.py  data_warehouse.py  excel.py  osc_units.py  template.py  vault_providers.py
test/: test_nzdpu.py  test_target_plots.py  utils.py
test/data/json/: benchmark_EI_OECM.json  benchmark_EI_TPI_1_5_degrees.json  benchmark_EI_TPI_2_degrees.json  benchmark_EI_TPI_below_2_degrees.json  benchmark_production_OECM.json
test/data/json-units/: benchmark_EI_OECM.json  benchmark_EI_TPI_2_degrees_shift_improve.json
