[project]
name = "ITR-examples"
version = "v1.1.6"
description = "Example code and user interface for the ITR project."
authors = [
  { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" },
]
requires-python = "<3.13,>=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["Climate", "ITR", "Finance"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
    "ITR==1.1.6",
    "pip>=23.3.1",
    "dash==2.16.1",
    "dash-bootstrap-components==1.6.0",
    "diskcache==5.6.3",
    "flask==3.0.3",
    "jupyterlab>=4.2.5",
    "kaleido==0.2.1",
    "matplotlib==3.8.4",
    "multiprocess==0.70.16",
    "plotly>=5.21.0",
]

[project.scripts]
itr-ui = "ITR_examples.ITR_UI:main"

[project.urls]
Homepage = "https://github.com/os-climate/ITR-examples"
Repository = "https://github.com/os-climate/ITR-examples"
Downloads = "https://github.com/os-climate/ITR-examples/releases"
"Bug Tracker" = "https://github.com/os-climate/ITR-examples/issues"
Documentation = "https://github.com/os-climate/ITR-examples/tree/main/docs"
"Source Code" = "https://github.com/os-climate/ITR-examples"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx>=7.2.6", "sphinx-copybutton>=0.5.2"]
dev = ["tox>=4.11.3", "tox-pdm>=0.7.0"]
lint = ["pre-commit"]

[tool.pytest.ini_options]
testpaths = [
    "test/",
]
addopts = "--cov"

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]
# relative_files = true

[tool.coverage.report]
fail_under = 0
skip_empty = true
format = ["term", "term-missing", "html", "text"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]

[tool.mypy]
ignore_missing_imports = true
